Fix iframe alignment.

--- a/styles/custom.css
+++ b/styles/custom.css
@@ -27,7 +27,8 @@ p.venue {
 
 .slide iframe {
   width: 100%;
-  height: 465px;
+  height: 474px;
+  margin-top: -12px;
 }
 
 .slide pre code {
